--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class=" new-wrap">
 				<div class="slider_area">
 					<div class="slider single-item">
-						<div class="new__slider">
+						<div class="new__slider slide active">
 							<h1 class="new__title" data-animation="fadeInLeft" data-delay=".4s">
 								Мёд
 							</h1>
@@ -79,7 +79,7 @@
 								<a href="shop.html" class="vector-btn btn" id="vector-btn">Открыть магазин</a>
 							</div>
 						</div>
-						<div class="new_slider">
+						<div class="new_slider slide">
 							<h1 class="new__title" data-animation="fadeInLeft" data-delay=".4s">
 								Орехи
 							</h1>
@@ -93,7 +93,7 @@
 								<a href="shop.html" class="vector-btn btn" id="vector-btn">Открыть магазин</a>
 							</div>
 						</div>
-						<div class="new_slider">
+						<div class="new_slider slide">
 							<h1 class="new__title" data-animation="fadeInLeft" data-delay=".4s">
 								Фито-чай
 							</h1>
